@@ -1,5 +1,5 @@
 
-# This file was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.037.
+# This file was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.034.
 use strict;
 use warnings;
 
