@@ -1,6 +1,8 @@
 Revision history for Catmandu-RIS
 
 {{$NEXT}}
+  - support for semi-automatic detection of separation characters at import
+  - fixing previous_key import bug
 
 0.04  2015-08-07 13:08:59 CEST
   - data parsing improved, when field is missing take the previous one
